Bug 1120549 - [rtl] lock sreen enter field dots are missaligned when entering password

--- a/apps/system/lockscreen/style/lockscreen_inputpad.css
+++ b/apps/system/lockscreen/style/lockscreen_inputpad.css
@@ -49,6 +49,10 @@
   margin-top: -0.75rem;
 }
 
+#lockscreen-passcode-code > span[data-dot]:-moz-locale-dir(rtl):before {
+  right: 50%;
+}
+
 #lockscreen-passcode-pad {
   -moz-box-sizing: border-box;
   position: absolute;
